examples/test/testpolicy16778.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16778
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key3: value34
      key2: value8
      key37: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value33
          key24: value44
          key19: value36
      podSelector:
        matchLabels:
          key45: value12
